--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,22 @@ Jinja2==2.7.3
 MarkupSafe==0.23
 Rdio==0.3.0
 SQLAlchemy==1.0.5
+Tempita==0.5.2
 Werkzeug==0.10.4
+cffi==1.1.2
+cryptography==0.9.1
+decorator==3.4.2
+enum34==1.0.4
 httplib2==0.9.1
+idna==2.0
+ipaddress==1.0.7
 itsdangerous==0.24
 oauth2==1.5.211
+pbr==0.11.0
+pycparser==2.14
 rauth==0.7.1
 requests==2.7.0
+six==1.9.0
+sqlalchemy-migrate==0.9.6
+sqlparse==0.1.15
 wsgiref==0.1.2
