--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 Flask==0.10.1
 Flask-Login==0.2.11
 Flask-SQLAlchemy==2.0
+Flask-WTF==0.11
 Jinja2==2.7.3
 MarkupSafe==0.23
 Rdio==0.3.0
 SQLAlchemy==1.0.5
 Tempita==0.5.2
+WTForms==2.0.2
 Werkzeug==0.10.4
 cffi==1.1.2
 cryptography==0.9.1
