--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-redis
 Flask==0.10.1
 Flask-Login==0.2.11
+Flask-Restless==0.17.0
 Flask-SQLAlchemy==2.0
 Flask-WTF==0.11
 Jinja2==2.7.3
@@ -18,12 +18,17 @@ httplib2==0.9.1
 idna==2.0
 ipaddress==1.0.7
 itsdangerous==0.24
+mimerender==0.5.5
 mock==1.0.1
 oauth2==1.5.211
 pbr==0.11.0
 pycparser==2.14
+python-dateutil==2.4.2
+python-mimeparse==0.1.4
 rauth==0.7.1
+redis==2.10.3
 requests==2.7.0
 six==1.9.0
 sqlparse==0.1.15
+uWSGI==2.0.10
 wsgiref==0.1.2
