--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Flask==0.10.1
 Flask-Login==0.2.11
-Flask-Restless==0.17.0
+Flask-RESTful==0.3.3
 Flask-SQLAlchemy==2.0
 Flask-WTF==0.11
 Jinja2==2.7.3
@@ -10,9 +10,11 @@ SQLAlchemy==1.0.5
 Tempita==0.5.2
 WTForms==2.0.2
 Werkzeug==0.10.4
+aniso8601==1.0.0
 cffi==1.1.2
 cryptography==0.9.1
 decorator==3.4.2
+dictalchemy==0.1.2.7
 enum34==1.0.4
 httplib2==0.9.1
 idna==2.0
@@ -25,6 +27,7 @@ pbr==0.11.0
 pycparser==2.14
 python-dateutil==2.4.2
 python-mimeparse==0.1.4
+pytz==2015.4
 rauth==0.7.1
 redis==2.10.3
 requests==2.7.0
