--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Flask==0.10.1
 Flask-Login==0.2.11
 Flask-RESTful==0.3.3
 Flask-SQLAlchemy==2.0
+Flask-SocketIO==0.6.0
 Flask-WTF==0.11
 Jinja2==2.7.3
 MarkupSafe==0.23
@@ -16,6 +17,10 @@ cryptography==0.9.1
 decorator==3.4.2
 dictalchemy==0.1.2.7
 enum34==1.0.4
+gevent==1.0.2
+gevent-socketio==0.3.6
+gevent-websocket==0.9.5
+greenlet==0.4.7
 httplib2==0.9.1
 idna==2.0
 ipaddress==1.0.7
