--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+CherryPy==3.8.0
 Flask==0.10.1
 Flask-Login==0.2.11
 Flask-RESTful==0.3.3
@@ -6,24 +7,31 @@ Flask-SocketIO==0.6.0
 Flask-WTF==0.11
 Jinja2==2.7.3
 MarkupSafe==0.23
+PyYAML==3.10
 Rdio==0.3.0
 SQLAlchemy==1.0.5
 Tempita==0.5.2
 WTForms==2.0.2
 Werkzeug==0.10.4
 aniso8601==1.0.0
+argparse==1.3.0
 cffi==1.1.2
 cryptography==0.9.1
 decorator==3.4.2
 dictalchemy==0.1.2.7
 enum34==1.0.4
+glob2==0.4.1
+gunicorn==19.3.0
 httplib2==0.9.1
 idna==2.0
 ipaddress==1.0.7
 itsdangerous==0.24
+jasmine==2.3.0
+jasmine-core==2.3.4
 mimerender==0.5.5
 mock==1.0.1
 oauth2==1.5.211
+ordereddict==1.1
 pbr==0.11.0
 pycparser==2.14
 python-dateutil==2.4.2
@@ -32,7 +40,7 @@ pytz==2015.4
 rauth==0.7.1
 redis==2.10.3
 requests==2.7.0
+selenium==2.46.1
 six==1.9.0
 sqlparse==0.1.15
-uWSGI==2.0.10
 wsgiref==0.1.2
