--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,129 @@
+Babel==1.3
 CherryPy==3.8.0
 Flask==0.10.1
+Flask-API==0.6.3
 Flask-Login==0.2.11
 Flask-RESTful==0.3.3
+Flask-Restless==0.17.0
 Flask-SQLAlchemy==2.0
+Flask-SocketIO==0.6.0
 Flask-WTF==0.11
 Jinja2==2.7.3
 MarkupSafe==0.23
 PyYAML==3.10
+Pygments==2.0.2
 Rdio==0.3.0
 SQLAlchemy==1.0.5
+Sphinx==1.3.1
 Tempita==0.5.2
+Twisted==13.2.0
 WTForms==2.0.2
 Werkzeug==0.10.4
+alabaster==0.7.3
+altgraph==0.10.2
 aniso8601==1.0.0
 argparse==1.3.0
+backports.ssl-match-hostname==3.4.0.2
+bdist-mpkg==0.5.0
+bonjour-py==0.3
+catkin-pkg==0.2.8
+certifi==2015.04.28
 cffi==1.1.2
 cryptography==0.9.1
 decorator==3.4.2
 dictalchemy==0.1.2.7
+docutils==0.12
 enum34==1.0.4
+fudge==1.0.3
+gevent==1.0.2
+gevent-socketio==0.3.6
+gevent-websocket==0.9.5
 glob2==0.4.1
+greenlet==0.4.7
 gunicorn==19.3.0
+hiredis==0.2.0
 httplib2==0.9.1
 idna==2.0
 ipaddress==1.0.7
 itsdangerous==0.24
 jasmine==2.3.0
 jasmine-core==2.3.4
+macholib==1.5.1
+matplotlib==1.3.1
 mimerender==0.5.5
 mock==1.0.1
+modulegraph==0.10.4
+numpy==1.8.0rc1
 oauth2==1.5.211
 ordereddict==1.1
 pbr==0.11.0
 psycopg2==2.6.1
+py2app==0.7.3
+pyOpenSSL==0.13.1
+pyasn1==0.1.7
 pycparser==2.14
+pyobjc-core==2.5.1
+pyobjc-framework-Accounts==2.5.1
+pyobjc-framework-AddressBook==2.5.1
+pyobjc-framework-AppleScriptKit==2.5.1
+pyobjc-framework-AppleScriptObjC==2.5.1
+pyobjc-framework-Automator==2.5.1
+pyobjc-framework-CFNetwork==2.5.1
+pyobjc-framework-Cocoa==2.5.1
+pyobjc-framework-Collaboration==2.5.1
+pyobjc-framework-CoreData==2.5.1
+pyobjc-framework-CoreLocation==2.5.1
+pyobjc-framework-CoreText==2.5.1
+pyobjc-framework-DictionaryServices==2.5.1
+pyobjc-framework-EventKit==2.5.1
+pyobjc-framework-ExceptionHandling==2.5.1
+pyobjc-framework-FSEvents==2.5.1
+pyobjc-framework-InputMethodKit==2.5.1
+pyobjc-framework-InstallerPlugins==2.5.1
+pyobjc-framework-InstantMessage==2.5.1
+pyobjc-framework-LatentSemanticMapping==2.5.1
+pyobjc-framework-LaunchServices==2.5.1
+pyobjc-framework-Message==2.5.1
+pyobjc-framework-OpenDirectory==2.5.1
+pyobjc-framework-PreferencePanes==2.5.1
+pyobjc-framework-PubSub==2.5.1
+pyobjc-framework-QTKit==2.5.1
+pyobjc-framework-Quartz==2.5.1
+pyobjc-framework-ScreenSaver==2.5.1
+pyobjc-framework-ScriptingBridge==2.5.1
+pyobjc-framework-SearchKit==2.5.1
+pyobjc-framework-ServiceManagement==2.5.1
+pyobjc-framework-Social==2.5.1
+pyobjc-framework-SyncServices==2.5.1
+pyobjc-framework-SystemConfiguration==2.5.1
+pyobjc-framework-WebKit==2.5.1
+pyparsing==2.0.1
 python-dateutil==2.4.2
 python-mimeparse==0.1.4
 pytz==2015.4
 rauth==0.7.1
 redis==2.10.3
 requests==2.7.0
+rosdep==0.11.2
+rosdistro==0.4.2
+rosinstall==0.7.5
+rosinstall-generator==0.1.11
+rospkg==1.0.35
+scipy==0.13.0b1
 selenium==2.46.1
+simplejson==3.6.5
 six==1.9.0
+snowballstemmer==1.2.0
+soundcloud==0.4.1
+sphinx-rtd-theme==0.1.7
+sqlalchemy-migrate==0.9.6
 sqlparse==0.1.15
+sse==1.2
+tornado==4.2
+uWSGI==2.0.10
+vcstools==0.1.36
+virtualenv==13.1.0
 wsgiref==0.1.2
+wstool==0.1.6
+xattr==0.6.4
+zope.interface==4.1.1
