--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 CherryPy==3.8.0
 Flask==0.10.1
 Flask-Login==0.2.11
+Flask-Mail==0.9.1
 Flask-RESTful==0.3.3
 Flask-SQLAlchemy==2.0
 Flask-WTF==0.11
@@ -14,6 +15,7 @@ WTForms==2.0.2
 Werkzeug==0.10.4
 aniso8601==1.0.0
 argparse==1.3.0
+blinker==1.4
 cffi==1.1.2
 cryptography==0.9.1
 decorator==3.4.2
