did some work on Jasmine tests

--- a/spec/javascripts/support/jasmine.yml
+++ b/spec/javascripts/support/jasmine.yml
@@ -11,13 +11,14 @@
 #   - dist/**/*.js
 #
 src_files:
-  - app/static/bower_components/angular/*.js
+
+  - app/static/bower_components/jquery/jquery.js
+  - app/static/bower_components/angular/angular.js.js
   - app/static/bower_components/angular-mocks/*.js
-  - app/static/bower_components/angular-ui-router/release/*.js
-  - app/static/bower_components/angularfire/dist/*.js
+  - app/static/bower_components/angular-ui-router/release/angular-ui-router.js.js
+  - app/static/bower_components/angularfire/dist/js/bootstrap.js
   - app/static/bower_components/bootstrap/dist/js/*.js
   - app/static/bower_components/firebase/*.js
-  - app/static/bower_components/jquery/*.js
   - app/static/group_view/*.js
   - app/static/home_view/*.js
   - app/static/login_view/*.js
