--- a/spec/javascripts/support/jasmine.yml
+++ b/spec/javascripts/support/jasmine.yml
@@ -13,16 +13,17 @@
 src_files:
 
   - app/static/bower_components/jquery/jquery.js
-  - app/static/bower_components/angular/angular.js.js
-  - app/static/bower_components/angular-mocks/*.js
-  - app/static/bower_components/angular-ui-router/release/angular-ui-router.js.js
   - app/static/bower_components/angularfire/dist/js/bootstrap.js
-  - app/static/bower_components/bootstrap/dist/js/*.js
-  - app/static/bower_components/firebase/*.js
-  - app/static/group_view/*.js
-  - app/static/home_view/*.js
-  - app/static/login_view/*.js
-  - app/static/*.js
+  - app/static/bower_components/angular/angular.js
+  - app/static/bower_components/angular-ui-router/release/angular-ui-router.js
+  - app/static/bower_components/firebase/firebase-debug.js
+  - app/static/bower_components/angularfire/dist/angularfire.js
+  - app/static/js/tattletale.js
+  - app/static/app.js
+  - app/static/group_view/group_view.js
+  - app/static/home_view/home_view.js
+  - app/static/login_view/login_view.js
+  - app/static/bower_components/angular-mocks/angular-mocks.js
 # stylesheets
 #
 # Return an array of stylesheet filepaths relative to src_dir to include before jasmine specs.
